# cmdserver

./: .gitignore  .travis.yml  Dockerfile  LICENSE  MANIFEST.in  Pipfile  README.md  cmdserver.spec  pyproject.toml  setup.py
.github/workflows/: create-app.yaml
ahk/: GetActiveBrowserURL.ahk  getPlayingNow.ahk  jravr.ahk  launch_player.ahk  start.bat
cmdserver/: commandcontroller.py  config.py  infoprovider.py  jvc.py  jvccommands.py  main.py  mqtt.py  pjcontroller.py  tivocontroller.py  ws.py  zeroconf.py
cmdserver/apis/: command.py  commands.py  info.py  pj.py  playingnow.py  tivo.py  tivos.py  version.py  wake.py
src/: cmdserver.py  command.py  commandcontroller.py  config.py  debounce.py  jvc.py  jvccommands.py  pj.py  pjcontroller.py  playingnow.py  tivo.py  tivocontroller.py  wol.py  ws.py
